################################################################################
#                    ____            _                  _                      #
#                   |  _ \ _ __ ___ | |_ ___   ___ ___ | |                     #
#                   | |_) | '__/ _ \| __/ _ \ / __/ _ \| |                     #
#                   |  __/| | | (_) | || (_) | (_| (_) | |                     #
#                   |_|   |_|  \___/ \__\___/ \___\___/|_|                     #
#                                                                              #
#           == A Simple ASCII Header Generator for Network Protocols ==        #
#                                                                              #
################################################################################
#                                                                              #
#                            ===== CHANGELOG =====                             #
#                                                                              #
################################################################################

- 2014-08-15: Initial version

- 2015-08-16: Added a number of Industrial Control Protocols. This patch was
              submitted by Jean-Christophe (https://github.com/phocean)